@startuml

scale 2480 width
skinparam dpi 300
skinparam defaultFontSize 14

set namespaceSeparator ::

class "respire::components::Global::Phase.dart::TrainingStage" {
  +String id
  +String name
  +int reps
  +double increment
  +List<BreathingPhase> breathingPhases
  +void addBreathingPhase()
  +void propagateNextSound()
  +void propagateBackgroundSound()
}
"respire::components::Global::Phase.dart::TrainingStage" *-- "respire::components::Global::Step.dart::BreathingPhase"

class "respire::components::Global::PhaseSounds.dart::BreathingPhaseSounds" {
  +SoundAsset preBreathingPhase
  +SoundAsset background
}

"respire::components::Global::PhaseSounds.dart::BreathingPhaseSounds" o-- "respire::components::Global::SoundAsset.dart::SoundAsset"

class "respire::components::Global::Settings.dart::Settings" {
  +int preparationDuration
  +bool differentColors
  +bool binauralBeatsEnabled
  +double binauralLeftFrequency
  +double binauralRightFrequency
}

class "respire::components::Global::SoundAsset.dart::SoundAsset" {
  -String _name
  +String path
  +SoundType type
  +String name
  +String toString()
}

"respire::components::Global::SoundAsset.dart::SoundAsset" <-- "respire::components::Global::SoundAsset.dart::SoundType"

class "respire::components::Global::SoundAsset.dart::SoundType" {
  +int index
  {static} +SoundType voice
  {static} +SoundType melody
  {static} +SoundType cue
  {static} +SoundType counting
  {static} +SoundType none
}

class "respire::components::Global::Sounds.dart::Sounds" {
  +SoundAsset countingSound
  +SoundScope nextSoundScope
  +SoundAsset nextSound
  +SoundAsset preparationTrack
  +SoundAsset endingTrack
  +SoundScope backgroundSoundScope
  +List<SoundAsset> trainingBackgroundPlaylist
  +Map<String, List<SoundAsset>> stagePlaylists
  +Map<BreathingPhaseType, SoundAsset> breathingPhaseCues
  +Map<BreathingPhaseType, SoundAsset> breathingPhaseBackgrounds
  +void clearUserSound()
}

"respire::components::Global::Sounds.dart::Sounds" o-- "respire::components::Global::SoundAsset.dart::SoundAsset"
"respire::components::Global::Sounds.dart::Sounds" <-- "respire::components::Global::SoundScope.dart::SoundScope"

class "respire::components::Global::SoundScope.dart::SoundScope" {
  +int index
  {static} +SoundScope none
  {static} +SoundScope global
  {static} +SoundScope perStage
  {static} +SoundScope perPhase
}

class "respire::components::Global::Step.dart::BreathingPhase" {
  +double duration
  +BreathingPhaseIncrement? increment
  +BreathingPhaseType breathingPhaseType
  +BreathingPhaseSounds sounds
  +double getBreathingPhaseDuration()
}

"respire::components::Global::Step.dart::BreathingPhase" *-- "respire::components::Global::StepIncrement.dart::BreathingPhaseIncrement"
"respire::components::Global::Step.dart::BreathingPhase" <-- "respire::components::Global::Step.dart::BreathingPhaseType"
"respire::components::Global::Step.dart::BreathingPhase" *-- "respire::components::Global::PhaseSounds.dart::BreathingPhaseSounds"

class "respire::components::Global::Step.dart::BreathingPhaseType" {
  +int index
  {static} +BreathingPhaseType inhale
  {static} +BreathingPhaseType exhale
  {static} +BreathingPhaseType retention
  {static} +BreathingPhaseType recovery
}

class "respire::components::Global::StepIncrement.dart::BreathingPhaseIncrement" {
  +double value
  +BreathingPhaseIncrementType type
}

"respire::components::Global::StepIncrement.dart::BreathingPhaseIncrement" <-- "respire::components::Global::StepIncrement.dart::BreathingPhaseIncrementType"

class "respire::components::Global::StepIncrement.dart::BreathingPhaseIncrementType" {
  +int index
  {static} +BreathingPhaseIncrementType percentage
  {static} +BreathingPhaseIncrementType value
}

class "respire::components::Global::Training.dart::Training" {
  +String title
  +String description
  +List<TrainingStage> trainingStages
  +Sounds sounds
  +Settings settings
  +int countEmptyStages()
  +void deleteEmptyStages()
  +bool isEmpty()
  +void updateSounds()
}

"respire::components::Global::Training.dart::Training" *-- "respire::components::Global::Phase.dart::TrainingStage"
"respire::components::Global::Training.dart::Training" *-- "respire::components::Global::Sounds.dart::Sounds"
"respire::components::Global::Training.dart::Training" *-- "respire::components::Global::Settings.dart::Settings"


@enduml